Revision history for Perl extension Moose::Autobox

0.02 
    - fixed Moose::Autobox so that PAUSE won't try to 
      index SCALAR, ARRAY, HASH and CODE.
    
    * Moose::Autobox::Ref
      - added &dump method which will use Data::Dumper
        to return a dumped representation of the ref
      
    * Moose::Autobox::Array
      - added Junctions support with Perl6::Junction

0.01 Fri. June 9, 2006
    - Autoboxing, all the cool kids are doing it ;)
    